# first-plan

./: .first-plan.toml.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  briefing-pattern-aware-tool.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: lint.yml  release.yml  test.yml
agents/: discovery-analyst.md  pattern-archeologist.md  reconciliation-auditor.md  verification-runner.md
commands/: ask.md  check.md  cochange.md  execute.md  features.md  hot.md  in-flight.md  init.md  lsp-status.md  owner.md  plan.md  provenance.md  quick.md  refresh.md  reuse.md  risk.md  rollback.md  status.md  why.md
docs/i18n/: CONTRIBUTING.pt-BR.md  CONTRIBUTORS.pt-BR.md  README.pt-BR.md
engine/: .gitignore  Cargo.toml  README.md
engine/crates/cli/: Cargo.toml
engine/crates/cli/src/: main.rs  tty.rs
engine/crates/cli/src/commands/: cochange.rs  compress.rs  contracts.rs  hash.rs  index.rs  lsp.rs  mod.rs  quality.rs  quick.rs  search.rs  watch.rs
engine/crates/cli/tests/: cli_test.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: ast.rs  cochange.rs  compress.rs  embeddings.rs  git.rs  hash.rs  index.rs  lib.rs  output.rs  quick.rs  search.rs  symbols.rs  tokenize.rs  watch.rs
engine/crates/core/src/contracts/: crossref.rs  graphql.rs  mod.rs  openapi.rs  protobuf.rs
engine/crates/core/src/lsp/: client.rs  daemon.rs  fallback.rs  mod.rs  ops.rs  registry.rs
engine/crates/core/src/quality/: ci.rs  coverage.rs  flaky.rs  mod.rs
hooks/: hooks.json  invalidate-cache.sh
meta-templates/: feature.md  plan.md  report.md
skills/co-change-analysis/: SKILL.md
skills/engine-bootstrap/: SKILL.md
skills/git-intelligence/: SKILL.md
skills/lens-engine/: SKILL.md
skills/lens-generic/: SKILL.md
skills/lens-go/: SKILL.md
skills/lens-mobile/: SKILL.md
skills/lens-php/: SKILL.md
skills/lens-python/: SKILL.md
skills/lens-rust/: SKILL.md
skills/lens-terraform/: SKILL.md
skills/lens-typescript/: SKILL.md
skills/pattern-extraction/: SKILL.md
skills/plan-emission/: SKILL.md
skills/protocol/: SKILL.md
skills/provenance-tracker/: SKILL.md
skills/reconciliation/: SKILL.md
skills/reuse-indexing/: SKILL.md
skills/semantic-reuse/: SKILL.md
templates/: INDEX.md  report.md.template
templates/00-mission/: purpose.md  stakeholders.md
templates/01-topology/: activity.md  architecture.md  boundaries.md  deployments.md  ownership.md  stacks.md
templates/02-conventions/: di.md  errors.md  logging.md  naming.md  security.md  testing.md
templates/03-reuse/: INDEX.md  components.md  hooks.md  search.json  types.md  utils.md
templates/04-domain/: entities.md  flows.md  glossary.md
templates/05-risks/: debt.md  fragile.md  magic.md  untested.md
templates/06-rationale/: do.md  dont.md  why.md
templates/07-state/: STATE.md  in-flight.md
templates/08-meta/: cache.json  confidence.md  coverage.md  questions.md
templates/09-features/: INDEX.md
tools/: gen_logo_banner.py  validate_frontmatter.py
