[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vynazevedo/first-plan"
authors = ["Vinicius Azevedo <viniciusdiazevedo@gmail.com>"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
regex = "1"
fastembed = "4"
half = "2"
dirs = "5"
# Tree-sitter and grammars (optional, behind tree-sitter feature flag)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.23"
streaming-iterator = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
