[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vynazevedo/first-plan"
authors = ["Vinicius Azevedo <viniciusdiazevedo@gmail.com>"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
regex = "1"
fastembed = "4"
half = "2"
dirs = "5"
# Tree-sitter and grammars (optional, behind tree-sitter feature flag)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.23"
streaming-iterator = "0.1"
notify = "7"
notify-debouncer-mini = "0.5"
crossterm = "0.28"
indicatif = "0.17"
is-terminal = "0.4"
# LSP client (v0.6.0)
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time", "net", "fs"] }
lsp-types = "0.97"
url = "2"
which = "7"
libc = "0.2"
# Quality layer (v0.8.0)
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
# Contracts layer (v0.9.0)
openapiv3 = "2"
graphql-parser = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
