[package]
name = "first-plan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for first-plan-engine - git analysis, co-change graph, hashing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile = "3"
