[package]
name = "first-plan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for first-plan-engine - git analysis, co-change graph, hashing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
xxhash-rust.workspace = true
rusqlite.workspace = true
walkdir.workspace = true
regex.workspace = true
dirs.workspace = true

# Optional ML deps - included only with --features=ml
fastembed = { workspace = true, optional = true }
# Force vendored OpenSSL so ml builds work in distro-agnostic environments
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
default = []
ml = ["dep:fastembed", "dep:openssl"]

[dev-dependencies]
tempfile = "3"
