[package]
name = "first-plan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for first-plan-engine - git analysis, co-change graph, hashing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
xxhash-rust.workspace = true
rusqlite.workspace = true
walkdir.workspace = true
regex.workspace = true
dirs.workspace = true

# Optional ML deps - included only with --features=ml
fastembed = { workspace = true, optional = true }
# Force vendored OpenSSL so ml builds work in distro-agnostic environments
openssl = { version = "0.10", optional = true, features = ["vendored"] }
# Tree-sitter for AST-based extraction (opt-in via tree-sitter feature)
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
streaming-iterator = { workspace = true, optional = true }

[features]
default = []
ml = ["dep:fastembed", "dep:openssl"]
tree-sitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-go",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-bash",
    "dep:streaming-iterator",
]

[dev-dependencies]
tempfile = "3"
